# cppnewfeatures

./: CMakeLists.txt  main.cpp
cpp20/: CMakeLists.txt  ConceptsLibrary.ixx  ConstInit.ixx  CoroutineLibrary.ixx  DesignatedInitializers.ixx  FormatLibrary.ixx  InitRangeBasedFor.ixx  InlineNamespaces.ixx  RangesLibrary.ixx  SpanLibrary.ixx  ThreewayComparision.ixx
